# PulsePileup

./: ADC.cpp  ADC.h  AnalyticalPPU.cpp  AnalyticalPPU.h  ChannelEnergy.h  GapStatistics.cpp  GapStatistics.h  Makefile.am  Makefile.in  MeasuredEnergies.cpp  MeasuredEnergies.h  PPUExample.cpp  PPU_MakeH5Response.cpp  PrRspsHDF5.cpp  PrRspsHDF5.h  PulseShape.h  README.txt  RENAMETO_PulseShape.h  SpectralShapes.h  SpectrumHDF5.cpp  SpectrumHDF5.h  configure  configure.ac  fits_static_interface.h  ppu_IDL_interface.cpp  ppu_pha_spec.cpp  ppu_static_interface.cpp  ppu_static_interface.h
TestingData/: ZerothOrder_b1.pha  ZerothOrder_n9.pha  b1_data.lu  b1_data.pha  b1_drm.rsp  n9_data.lu  n9_data.pha  n9_drm.rsp
idl_code/: drmdata__define.pro  link_ppu_library.pro  ppu_example.pro  ppu_fit_example.pro
src2/: DBStringUtilities.cpp  DBStringUtilities.hh  DynMatrix.h  EdgeSet.hh  PHAElements.hh  PHAStructures.cpp  PHAStructures.hh  PHA_IO.cpp  PHA_IO.hh  VectorSpan.h  spoccExeUtilities.cpp  spoccExeUtilities.h
